# kdive-v2

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  cliff.toml  docker-compose.yml  justfile  pyproject.toml  systems.toml.example
.github/: actionlint.yaml  dependabot.yml
.github/workflows/: ci.yml  docs-mermaid.yml  release-image.yml  release.yml
deploy/compose/: README.md
deploy/remote-libvirt-guest-helpers/: README.md  kdive-capture-vmcore  kdive-drgn  kdive-install-kernel
deploy/systemd/: README.md
docs/: README.md  RELEASING.md
docs/admin/: local-stack.md
docs/adr/: 0000-template.md  0001-greenfield-rewrite.md  0002-multi-user-mcp-http.md  0003-six-durable-objects.md  0004-first-slice-local-libvirt.md  0005-postgres-object-store-state.md  0006-oidc-rbac-attribution.md  0007-metering-budgets-admission.md  0008-async-worker-tier-job-queue.md  0009-capability-provider-dispatch.md  0010-fastmcp-framework-auth.md  0011-provisioning-profile-schema.md  0012-secret-backend.md  0013-object-store-layout-retention.md  0014-structured-logging.md  0015-sql-migration-runner.md  0016-repository-layer-locks-idempotency.md  0017-object-store-client-interface.md  0018-job-queue-worker-execution.md  0019-tool-response-envelope.md  0020-rbac-audit-gate-implementation.md  0021-reconciler-loop-drift-repair.md  0022-capability-registry-dispatch-impl.md  0023-discovery-allocation-admission.md  0024-provisioning-profile-model-shape.md  0025-provisioning-plane-libvirt.md  0026-investigation-run-lifecycle.md  0027-build-plane-local-make.md  0027-control-plane-power-force-crash.md  0027-safety-modules-secret-backend-impl.md  0028-control-plane-power-force-crash.md  0029-build-plane-local-make.md  0030-install-boot-plane.md  0031-retrieve-plane-vmcore-postmortem.md  0032-connect-plane-gdbstub-debugsession.md  0033-drgn-introspection-from-vmcore.md  0034-debug-plane-gdbmi-tier.md  0035-walking-skeleton-e2e-harness.md  0036-reservation-lease-semantics.md  0037-rbac-hardening-role-separation.md  (+80 more)
docs/design/: m0-walking-skeleton.md  m1.1-platform-rbac-tier.md  m1.2-live-stack-e2e.md  m1.3-platform-operations.md  m1.4-system-catalog-scheduling.md  release-readiness-plan.md  release-readiness.md
docs/development/: releasing.md
docs/guide/: async-jobs.md  concepts.md  errors.md  index.md  response-envelope.md  safety-and-rbac.md
docs/operating/: docker-compose.md  index.md  install.md  kubernetes.md  systemd.md
docs/plans/: m0-implementation.md  m1-implementation.md  m1.1-implementation.md
docs/reports/: m2-portability.md  mcp-coverage-campaign-2026-06-13.md  provider-configuration-requirements.md
docs/runbooks/: dcache-demo.md  doctor-exit-criterion.md  four-method-live-run.md  image-lifecycle.md  kdivectl.md  kubernetes-deploy.md  live-stack.md  mcp-coverage-campaign-rerun.md  remote-libvirt-host-setup.md  remote-live-stack.md
docs/solutions/: 2026-06-13-virt-customize-copyin-selinux-guest-exec-enoent.md
docs/specs/: m0-walking-skeleton.md  m1-allocation-accounting.md  m1.1-platform-rbac-tier.md  m1.3-platform-operations.md  m1.4-system-catalog-scheduling.md  m1.5-fault-injection-provider.md  m2-remote-libvirt.md  release-readiness-plan.md  release-readiness.md  top-level-design.md
docs/test-cases/: README.md
fixtures/local-libvirt/: manifest.yaml
scripts/: check-doc-links.sh  check-doc-paths.sh  check-local-libvirt.sh  check-remote-libvirt.sh  check-setup-deps.sh  check-ssh-reachable.sh  check_env_documented.py  config_env_guard.py  demo-token.sh  fetch-kernel-tree.sh  gen_config_reference.py  gen_tool_reference.py  m2_portability_gate.py  stamp-buildinfo.sh
scripts/coverage_campaign/: __init__.py  d1.env.template  drive.py  gridgen.py  results.py  systems.py
scripts/live-stack/: apply-migrations.sh  env.sh  start.sh  stop.sh
scripts/live-vm/: build-busybox-rootfs.sh  build-guest-image.sh  fetch-fedora-cloud-image.sh
src/kdive/: __init__.py  __main__.py  log.py  serialization.py  server_health.py  version.py  worker_health.py
tests/: conftest.py  db_waits.py  test_log.py  test_main_version.py  test_project_metadata.py  test_serialization.py  test_smoke.py  test_version.py  test_version_pyproject_consistency.py  test_worker_health.py
tests/admin/: conftest.py  test_bootstrap.py  test_bootstrap_retirement.py  test_default_fixtures.py
tests/adversarial/: __init__.py  conftest.py  test_admission_concurrency.py  test_admission_fault_inject_races.py  test_auth_properties.py  test_complete_build_concurrency.py  test_debug_session_races.py  test_idempotency_concurrency.py  test_lease_expiry_renew_race.py  test_lock_key_properties.py  test_provider_state_races.py  test_provider_xml.py  test_queue_concurrency.py  test_reconciler_atomicity.py
tests/build_configs/: conftest.py  test_catalog.py  test_seed.py  test_seed_db.py
tests/cli/: test_dispatch_wiring.py  test_doctor_verb.py  test_images_verbs.py  test_login_cache.py  test_login_flow.py  test_mutation_verbs.py  test_no_service_import.py  test_passthrough.py  test_read_verbs.py  (+6 more)
(+1227 files in other folders)
