[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"

[project]
name = "kdive"
version = "0.1.0"
description = "Kernel Debug, Inspect, Validate, Explore — MCP platform for kernel build-boot-debug workflows"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
  "fastmcp==3.4.0",
  "psycopg[binary]==3.3.4",
  "boto3==1.43.21",
  "libvirt-python==12.0.0",
  "drgn==0.2.0",
  "pydantic==2.13.4",
]

[dependency-groups]
dev = [
  "ruff==0.15.15",
  "ty==0.0.42",
  "pytest==9.0.3",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.rules]
# Keep ty's strict defaults for the hard-gating CI typecheck job — no project-wide
# relaxations. The C-extension dependencies (libvirt-python, drgn) ship no type
# stubs, so the later issues that import them suppress `unresolved-import` with a
# scoped per-site ignore rather than downgrading the rule for the whole tree.

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "live_vm: requires an operator-provided libvirt/KVM environment (KVM/nested-virt host, libvirt, kdump-enabled guest image)",
]
