[build-system]
requires = ["uv_build==0.11.19"]
build-backend = "uv_build"

[project]
name = "kdive"
version = "0.3.0"
description = "Kernel Debug, Inspect, Validate, Explore — MCP platform for kernel build-boot-debug workflows"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
  "fastmcp-slim[server,client]==3.4.0",
  "psycopg[binary]==3.3.4",
  "psycopg-pool==3.3.1",
  "boto3==1.43.21",
  "botocore==1.43.21",
  "defusedxml==0.7.1",
  "httpx==0.28.1",
  "libvirt-python==12.3.0",
  "mcp==1.27.2",
  "opentelemetry-api==1.42.1",
  "opentelemetry-sdk==1.42.1",
  "opentelemetry-exporter-otlp-proto-grpc==1.42.1",
  "opentelemetry-instrumentation-logging==0.63b1",
  "pydantic==2.13.4",
  "pygdbmi==0.11.0.0",
  "pyyaml==6.0.3",
  "starlette==1.3.0",
  "uvicorn==0.49.0",
]

[dependency-groups]
dev = [
  "ruff==0.15.15",
  "ty==0.0.42",
  "pytest==9.0.3",
  "testcontainers==4.14.2",
  "hypothesis==6.142.4",
]

[project.scripts]
kdivectl = "kdive.cli.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.rules]
# Keep ty's strict defaults for the hard-gating CI typecheck job — no project-wide
# relaxations. The C-extension dependencies ship no type stubs, so the later issues
# that import them suppress `unresolved-import` with a
# scoped per-site ignore rather than downgrading the rule for the whole tree.

[tool.pyright]
# `ty` (above) is the authoritative type checker — it runs in CI (`just type`) and resolves the
# venv via `uv run`. This stanza is only for the editor/IDE language server (Pyright/Pylance/
# basedpyright): point it at the uv `.venv` so third-party imports resolve, and turn type-checking
# off so it neither duplicates ty nor disagrees on ty-only `# ty: ignore` suppressions (e.g. the
# libvirt duck-typed seam). Editor navigation/hover only — not a second CI gate.
venvPath = "."
venv = ".venv"
typeCheckingMode = "off"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]
markers = [
  "live_vm: requires an operator-provided libvirt/KVM/debug environment (KVM/nested-virt host, libvirt, drgn, kdump-enabled guest image)",
  "live_stack: requires a running kdive stack (host server/worker/reconciler + Postgres/MinIO/OIDC backends) and a reachable OIDC issuer, beyond the live_vm KVM host",
  "oidc_issuer: requires only the mock-oauth2-server container up (no kdive server, no Postgres, no VM)",
]
